feat: 发布 0.1.486 权威玩法、内容扩展与维护文档
将上一版 0.1.453 基线之后累计的 0.1.454-0.1.486 更新统一入库。

更新内容：
- 加深任务、宗门、拍卖、商路、法宝、秘境和召唤物的服务端权威逻辑
- 加入功法学习、功法层数、可持久化功法树、协议 17 同步和更多 FTB 任务/奖励
- 扩展宗门任务、商店、对话、据点、目录载体和玩法桥接
- 修复死亡进度、输入校验、交易原子性、战场计分、施法副作用、界面遮挡和翻译问题
- 重写 README.md，新增 MAINTENANCE.md，并忽略本地 output 输出目录

验证结果：
- Wave486 定向回归测试通过
- .\gradlew.bat --no-daemon --max-workers=1 build：BUILD SUCCESSFUL
- aiPreflight 已记录 mod_version=0.1.486，网络协议保持 17